--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-opencv-python==4.8.1
-numpy==1.24.3
-pyautogui==0.9.54
-python-dotenv==1.0.0
+opencv-python>=4.8.0.74
+numpy>=1.26.0
+pyautogui>=0.9.54
+python-dotenv>=1.0.0
+Pillow>=10.0.0
